--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
    <header class="page-header">
 
       <nav class="page-nav">
-      <a href="./index.html" class="logo"><span class="logo-beginning">WEb</span>Studio</a>
+      <a href="./index.html" class="logo">WEb<span class="logo-ending">Studio</span></a>
          <ul class="link-list">
-            <li><a href="" class="link">Studio</a></li>
+            <li><a href="./index.html" class="link">Studio</a></li>
             <li><a href="" class="link">Portfolio</a></li>
             <li><a href="" class="link">Contacts</a></li>
          </ul>
@@ -127,7 +127,7 @@
 
                <li class="portfolio-list-item">
                   <img src="./images/meditation-app.jpg" alt="meditation-app" width="360" height="300" class="portfolio-photo">
-                  <h3 class="portfolio-list-title">Meditaion App</h3>
+                  <h3 class="portfolio-list-title">Meditation App</h3>
                   <p class="text">App</p>
                </li>
 
@@ -155,7 +155,7 @@
 
    <footer class="page-footer">
 
-      <a href="./index.html" class="logo-footer"><span class="logo-footer-beginning">WEb</span>Studio</a>
+      <a href="./index.html" class="logo-footer">WEb<span class="logo-footer-ending">Studio</span></a>
       <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
    </footer>
