--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
       <address class="contacts">
          <ul class="contacts-list">
-            <li>
+            <li class="contacts-list-item">
                <a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a>
             </li>
-            <li class="contacts-list">
+            <li class="contacts-list-item">
                <a href="tel:+110001111111" class="contacts-link">+11 (000) 111-11-11</a>
             </li>
          </ul>
